--- a/content/programming.html
+++ b/content/programming.html
@@ -1,15 +1,24 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Programming.html</title>
-        <link rel="icon" href="./favicon.ico" type="image/x-icon" />
-    </head>
-    <body>
-        <main>
-            <h1>Programming.html</h1>
-        </main>
-    </body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="color-scheme" content="light dark" />
+    <link rel="stylesheet" href="pico/css/pico.pumpkin.min.css">
+    <title>Programming || sla-ppy.com</title>
+  </head>
+  <body>
+    <main class="container">
+      <h1>Programming</h1>
+
+    <header>
+      <div class="grid">
+        <div><a href="home.html">Home</a></div>
+        <div><a href="electronics.html">Electronics</a></div>
+        <div><del><a href="">Programming</a><del></div>
+      </div>
+    </header>
+
+    </main>
+  </body>
 </html>
