--- a/content/index.html
+++ b/content/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>sla-ppy.com</title>
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="color-scheme" content="light dark" />
